# dioxus-bevy

./: Cargo.toml  README.md
crates/dioxus-bevy/: Cargo.toml
crates/dioxus-bevy-macro/: Cargo.toml
crates/dioxus-bevy/examples/: hello_triangle.rs
crates/dioxus-bevy/src/: prelude.rs
dioxus-bevy-macro/: Cargo.toml
dioxus-bevy-macro/src/: lib.rs
examples/: gltf_model.rs  hello_triangle.rs  interactive_cube.rs
src/: lib.rs
