[workspace]
# This is a standalone crate, not part of a workspace

[package]
name = "dioxus-bevy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Embed Bevy rendering in Dioxus Native applications with proper lifecycle management"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dioxus-bevy"
keywords = ["bevy", "dioxus", "ui", "renderer", "gpu"]
categories = ["gui", "rendering", "graphics"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_render", "bevy_core_pipeline"] }
dioxus = "0.7"
dioxus-native = "0.7"

[dev-dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_asset",
] }

[[example]]
name = "hello_triangle"
path = "examples/hello_triangle.rs"

[[example]]
name = "interactive_cube"
path = "examples/interactive_cube.rs"
