[package]
name = "dioxus-bevy"
version = "0.1.0"
edition = "2021"
authors = ["PoHsuan Lai <pohsuanlai0208@gmail.com>"]
description = "Embed Bevy rendering in Dioxus Native applications with proper lifecycle management"
license = "MIT"
repository = "https://github.com/PoHsuanLai/dioxus-bevy"
keywords = ["bevy", "dioxus", "ui", "renderer", "gpu"]
categories = ["gui", "rendering", "graphics"]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_render", "bevy_core_pipeline", "bevy_winit"] }
dioxus = "0.7"
dioxus-native = "0.7"
wgpu = "26"
crossbeam-channel = "0.5"

dioxus-bevy-macro = { path = "../dioxus-bevy-macro", version = "0.1.0" }

[dev-dependencies]
bevy = "0.17"

[[example]]
name = "hello_triangle"
path = "examples/hello_triangle.rs"

[[example]]
name = "interactive_cube"
path = "examples/interactive_cube.rs"

[[example]]
name = "gltf_model"
path = "examples/gltf_model.rs"
